--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dependencies": {
         "@coral-xyz/anchor": "^0.29.0",
         "@solana/spl-token": "^0.4.0",
-        "@solana/web3.js": "^1.90.0"
+        "@solana/web3.js": "^1.90.0",
+        "sinon": "^17.0.1"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
