--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     },
     "dependencies": {
         "@coral-xyz/anchor": "^0.29.0",
+        "@sinonjs/fake-timers": "^11.2.2",
         "@solana/spl-token": "^0.4.0",
         "@solana/web3.js": "^1.90.0",
         "sinon": "^17.0.1"
@@ -13,6 +14,8 @@
         "@types/bn.js": "^5.1.0",
         "@types/chai": "^4.3.0",
         "@types/mocha": "^9.0.0",
+        "@types/sinon": "^17.0.3",
+        "@types/sinonjs__fake-timers": "^8.1.5",
         "chai": "^4.3.4",
         "mocha": "^9.0.3",
         "prettier": "^2.6.2",
