--- a/programs/pork_staking/Cargo.toml
+++ b/programs/pork_staking/Cargo.toml
@@ -18,4 +18,4 @@ default = []
 [dependencies]
 anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
 anchor-spl = "0.29.0"
-solana-program = "*"
+solana-program = "1.18.2"
