--- a/Anchor.toml
+++ b/Anchor.toml
@@ -14,7 +14,7 @@ pork_staking = "FhWWsKM5erDU1xbhkpZayeieAXhGXauKZWKmRjEL9BZW"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "devnet"
+cluster = "localnet"
 wallet = "/home/ubuntu/.config/solana/id.json"
 
 [scripts]
