--- a/Anchor.toml
+++ b/Anchor.toml
@@ -5,16 +5,16 @@ seeds = false
 skip-lint = false
 
 [programs.localnet]
-pork_staking = "FhWWsKM5erDU1xbhkpZayeieAXhGXauKZWKmRjEL9BZW"
+pork_staking = "5FVv4vXjWxenXoyGreTVXvqNoNWVnDrCCZnQPfvynhbj"
 
 [programs.devnet]
-pork_staking = "FhWWsKM5erDU1xbhkpZayeieAXhGXauKZWKmRjEL9BZW"
+pork_staking = "5FVv4vXjWxenXoyGreTVXvqNoNWVnDrCCZnQPfvynhbj"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
+cluster = "devnet"
 wallet = "/home/ubuntu/.config/solana/id.json"
 
 [scripts]
