--- a/programs/pork_staking/Cargo.toml
+++ b/programs/pork_staking/Cargo.toml
@@ -19,3 +19,4 @@ default = []
 anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
 anchor-spl = "0.29.0"
 solana-program = "1.18.2"
+solana-security-txt = "1.1.1"
